fix alway show horizontal scroll bar

--- a/src/style.css
+++ b/src/style.css
@@ -53,10 +53,12 @@
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
   padding: 0;
   margin: 0;
   background-color: white;
+
+  overflow-x: hidden;
 }
 
 @media (prefers-color-scheme: light) {
